refactor: replace field injection with constructor injection in controllers and services